SERVER-37375 ServiceContextMongoDTest fixture shouldn't write out storage engine related files to disk